Mon Nov  2 22:07:26 CET 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/util/UNVReader.java: Read UNV elements 92
	(parabolic triangles) and convert them to linear triangles.

Wed Oct  7 14:16:47 CEST 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/QEMDecimateHalfEdge.java: Change
	handling of virtual planes on boundary edges.

Fri Sep  4 11:46:45 CEST 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/Remesh.java: New class.

Fri Aug 28 12:15:35 CEST 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/projection/QuadricProjection.java:
	Do not check if vertex is mutable in getMatrix3DLocalFrame(),
	this check must be performed by the caller.
	* src/org/jcae/mesh/amibe/algos3d/SmoothNodes3DBg.java: Fix
	handling of nodes on inner boundaries when 'boundaries' option
	is false.

Wed Jul 22 14:07:27 CEST 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/AbstractHalfEdge.java: New SHARP
	attribute.
	* src/org/jcae/mesh/amibe/ds/Mesh.java: Rewrite buildRidges()
	to flag edges with this new attribute instead of creating
	virtual non-manifold edges.  Fix a bug in buildRidges(), angle
	computation was wrong.
	* src/org/jcae/mesh/amibe/algos3d/SmoothNodes3DBg.java: Add an
	option to set a feature angle.

Mon Jul 13 17:40:12 CEST 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/bora/xmldata/BoraToUnvConvert.java: New helper
	class to export bora meshes as UNV files.

Tue Jul  7 15:54:17 CEST 2009 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/xmldata/MeshExporter.java: Fix UNV export of
	groups.  A 2435-block is written, but writeSingleGroupUNV() used
	a 2430-block syntax, which is different.  Fix it to comply with
	2435 syntax.
	* src/org/jcae/mesh/amibe/util/UNVWriter.java: Write a 2435-block
	for groups, 2430 is obsolete.
